登录自定义Dialog

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="beauty_community">美女社区</string>
     <string name="personal_center">个人中心</string>
     <string name="text_setting">设置</string>
+    <string name="text_now_login">正在登录...</string>
 </resources>
