--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">SmartButler</string>
+    <string name="app_name">智能管家</string>
     <string name="butler">服务管家</string>
     <string name="weChat_selection">微信精选</string>
     <string name="beauty_community">美女社区</string>
