--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
     <string name="app_name">智能管家</string>
     <string name="butler">服务管家</string>
     <string name="weChat_selection">微信精选</string>
-    <string name="beauty_community">美女社区</string>
+    <string name="beauty_community">女孩社区</string>
     <string name="personal_center">个人中心</string>
     <string name="text_setting">设置</string>
     <string name="text_now_login">正在登录...</string>
